<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/nav_home"
      android:icon="@drawable/ic_menu_home_dark"
      android:title="@string/home"/>
    <item
      android:id="@+id/nav_new_game"
      android:icon="@drawable/ic_menu_new_dark"
      android:title="@string/new_game"/>
    <item
      android:id="@+id/nav_leaderboard"
      android:icon="@drawable/ic_menu_leaderboard_dark"
      android:title="@string/leaderboard"/>
    <item
      android:id="@+id/nav_stats"
      android:icon="@drawable/ic_menu_statistics_dark"
      android:title="@string/statistics"/>
  </group>

  <item android:title="">
    <menu>
      <item
        android:id="@+id/nav_preferences"
        android:icon="@drawable/ic_menu_preferences_dark"
        android:title="@string/preferences"/>
      <item
        android:id="@+id/nav_log_out"
        android:icon="@drawable/ic_menu_logout_dark"
        android:title="@string/logout"/>
    </menu>
  </item>

</menu>
