<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <Button
    android:id="@+id/main_button_new"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/new_game"
    app:layout_constraintBottom_toTopOf="@+id/main_button_stats"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <Button
    android:id="@+id/main_button_stats"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/statistics"
    app:layout_constraintBottom_toTopOf="@+id/main_button_leaderboard"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/main_button_new"/>
  <Button
    android:id="@+id/main_button_leaderboard"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/leaderboard"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/main_button_stats"/>

</android.support.constraint.ConstraintLayout>