<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior">

  <TextView
    android:id="@+id/summary_text_levels"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/header_levels_played"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>
  <TextView
    android:id="@+id/summary_text_solved"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/header_levels_solved"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/summary_text_levels"/>
  <TextView
    android:id="@+id/summary_text_guesses"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/header_total_guesses"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/summary_text_solved"/>
  <TextView
    android:id="@+id/summary_text_time"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/header_total_time"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/summary_text_guesses"/>
  <TextView
    android:id="@+id/summary_text_average_guesses"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/header_average_guesses"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/summary_text_time"/>
  <TextView
    android:id="@+id/summary_text_average_time"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/header_average_time_per_level"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/summary_text_average_guesses"/>

  <android.support.constraint.Guideline
    android:id="@+id/summary_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="192dp"/>

  <TextView
    android:id="@+id/summary_text_levels_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/placeholder"
    android:gravity="end"
    app:layout_constraintBottom_toBottomOf="@+id/summary_text_levels"
    app:layout_constraintStart_toStartOf="@+id/summary_guideline"
    app:layout_constraintTop_toTopOf="@+id/summary_text_levels"/>
  <TextView
    android:id="@+id/summary_text_solved_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/placeholder"
    android:gravity="end"
    app:layout_constraintBottom_toBottomOf="@+id/summary_text_solved"
    app:layout_constraintStart_toStartOf="@+id/summary_guideline"
    app:layout_constraintTop_toTopOf="@+id/summary_text_solved"/>
  <TextView
    android:id="@+id/summary_text_guesses_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/placeholder"
    android:gravity="end"
    app:layout_constraintBottom_toBottomOf="@+id/summary_text_guesses"
    app:layout_constraintStart_toStartOf="@+id/summary_guideline"
    app:layout_constraintTop_toTopOf="@+id/summary_text_guesses"/>
  <TextView
    android:id="@+id/summary_text_time_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/placeholder"
    android:gravity="end"
    app:layout_constraintBottom_toBottomOf="@+id/summary_text_time"
    app:layout_constraintStart_toStartOf="@+id/summary_guideline"
    app:layout_constraintTop_toTopOf="@+id/summary_text_time"/>
  <TextView
    android:id="@+id/summary_text_average_guesses_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/placeholder"
    android:gravity="end"
    app:layout_constraintBottom_toBottomOf="@+id/summary_text_average_guesses"
    app:layout_constraintStart_toStartOf="@+id/summary_guideline"
    app:layout_constraintTop_toTopOf="@+id/summary_text_average_guesses"/>
  <TextView
    android:id="@+id/summary_text_average_time_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/placeholder"
    android:gravity="end"
    app:layout_constraintBottom_toBottomOf="@+id/summary_text_average_time"
    app:layout_constraintStart_toStartOf="@+id/summary_guideline"
    app:layout_constraintTop_toTopOf="@+id/summary_text_average_time"/>

</android.support.constraint.ConstraintLayout>