<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <TextView
    android:id="@+id/statistics_text_level"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    android:text="@string/placeholder"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <android.support.constraint.ConstraintLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_view_margin"
    app:layout_constraintTop_toBottomOf="@id/statistics_text_level"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <TextView
      android:id="@+id/statistics_text_played"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:text="@string/header_played"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>
    <TextView
      android:id="@+id/statistics_text_played_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:layout_marginEnd="8dp"
      android:gravity="end"
      android:text="@string/placeholder"
      app:layout_constraintBottom_toBottomOf="@+id/statistics_text_played"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/statistics_text_played"/>
    <TextView
      android:id="@+id/statistics_text_solved"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:text="@string/header_solved"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/statistics_text_played"/>
    <TextView
      android:id="@+id/statistics_text_solved_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:layout_marginEnd="8dp"
      android:gravity="end"
      android:text="@string/placeholder"
      app:layout_constraintBottom_toBottomOf="@+id/statistics_text_solved"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/statistics_text_solved"/>
    <TextView
      android:id="@+id/statistics_text_guesses"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:text="@string/header_total_guesses"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/statistics_text_solved"/>
    <TextView
      android:id="@+id/statistics_text_guesses_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:layout_marginEnd="8dp"
      android:gravity="end"
      android:text="@string/placeholder"
      app:layout_constraintBottom_toBottomOf="@+id/statistics_text_guesses"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/statistics_text_guesses"/>
    <TextView
      android:id="@+id/statistics_text_average_guesses"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:text="@string/header_average_guesses"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/statistics_text_guesses"/>
    <TextView
      android:id="@+id/statistics_text_average_guesses_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:layout_marginEnd="8dp"
      android:gravity="end"
      android:text="@string/placeholder"
      app:layout_constraintBottom_toBottomOf="@+id/statistics_text_average_guesses"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/statistics_text_average_guesses"/>
    <TextView
      android:id="@+id/statistics_text_total_time"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:text="@string/header_total_time"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/statistics_text_average_guesses"/>
    <TextView
      android:id="@+id/statistics_text_total_time_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:layout_marginEnd="8dp"
      android:gravity="end"
      android:text="@string/placeholder"
      app:layout_constraintBottom_toBottomOf="@+id/statistics_text_total_time"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/statistics_text_total_time"/>
    <TextView
      android:id="@+id/statistics_text_average_time"
      android:textStyle="bold"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:layout_marginBottom="8dp"
      android:text="@string/header_average_time_per_level"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/statistics_text_total_time"/>
    <TextView
      android:id="@+id/statistics_text_average_time_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/default_view_margin"
      android:layout_marginEnd="8dp"
      android:gravity="end"
      android:text="@string/placeholder"
      app:layout_constraintBottom_toBottomOf="@+id/statistics_text_average_time"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/statistics_text_average_time"/>
  </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
